build: 更新项目构建配置